# Chess

./: .gitignore  CMakeLists.txt  LICENSE  README.md  deps.cmake  main.cpp
.github/ISSUE_TEMPLATE/: to-do.md
src/: Chess.cpp  bitboard.cpp  bitboard.hpp  board.cpp  board.hpp  bot.cpp  fileLoader.cpp  gui.cpp  gui.hpp  init.cpp  input.cpp  log.hpp  main.cpp  piece.cpp  piece.hpp  pipe.hpp  render.cpp  res.rc  uci.cpp  uci.hpp
src/include/: Chess.hpp  bitboard.hpp  bot.hpp  defs.hpp  main.hpp  render.hpp
